--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0
 app.id=com.tutorial.game
-app.mainclass=com.tutorial.game.IOSLauncher
+app.mainclass=com.space.invaders.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
 app.name=Tutorial Game
