--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -2,7 +2,7 @@ sourceCompatibility = 1.8
 sourceSets.main.java.srcDirs = [ "src/" ]
 sourceSets.main.resources.srcDirs = ["../assets"]
 
-project.ext.mainClassName = "com.tutorial.game.DesktopLauncher"
+project.ext.mainClassName = "com.space.invaders.DesktopLauncher"
 project.ext.assetsDir = new File("../assets")
 
 import org.gradle.internal.os.OperatingSystem
@@ -43,6 +43,8 @@ tasks.register('dist', Jar) {
     }
     with jar
 }
+
+
 
 
 
