--- a/html/build.gradle
+++ b/html/build.gradle
@@ -1,47 +1,26 @@
-apply plugin: 'gwt'
-apply plugin: 'war'
-
-sourceCompatibility = 1.8
-sourceSets.main.java.srcDirs = ["src/"]
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
-
-dependencies {
-    implementation project(':core')
-    implementation "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
-    implementation "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
-    implementation "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion"
-    implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
-}
-
 gwt {
-    gwtVersion = '2.10.0' // Should match the gwt version used for building the gwt backend
-    maxHeapSize = "1G" // Default 256m is not enough for gwt compiler. GWT is HUNGRY
-    minHeapSize = "1G"
+    gwtVersion='2.10.0' // Should match the gwt version used for building the gwt backend
+    maxHeapSize="1G" // Default 256m is not enough for gwt compiler. GWT is HUNGRY
+    minHeapSize="1G"
 
     src = files(file("src/")) // Needs to be in front of "modules" below.
     modules 'com.space.invaders.GdxDefinition'
-    devModules 'com.space.invaders.GdxDefinitionSuperdev' // Ensure this exists or remove it if not needed
+    devModules 'com.space.invaders.GdxDefinitionSuperdev'
     project.webAppDirName = 'webapp'
 
     compiler {
-        strict = true
-        disableCastChecking = true
+        strict = true;
+        disableCastChecking = true;
     }
 }
 
 import org.docstr.gradle.plugins.gwt.GwtSuperDev
 import org.akhikhl.gretty.AppBeforeIntegrationTestTask
 
-gretty {
-    httpPort = 8080
-    resourceBase = project.buildDir.path + "/gwt/draftOut"
-    contextPath = "/"
-    portPropertiesFileName = "TEMP_PORTS.properties"
-}
+gretty.httpPort = 8080
+gretty.resourceBase = project.buildDir.path + "/gwt/draftOut"
+gretty.contextPath = "/"
+gretty.portPropertiesFileName = "TEMP_PORTS.properties"
 
 tasks.register('startHttpServer') {
     dependsOn draftCompileGwt
@@ -60,8 +39,14 @@ tasks.register('startHttpServer') {
 }
 
 task beforeRun(type: AppBeforeIntegrationTestTask, dependsOn: startHttpServer) {
+    // The next line allows ports to be reused instead of
+    // needing a process to be manually terminated.
     file("build/TEMP_PORTS.properties").delete()
+    // Somewhat of a hack; uses Gretty's support for wrapping a task in
+    // a start and then stop of a Jetty server that serves files while
+    // also running the SuperDev code server.
     integrationTestTask 'superDev'
+
     interactive false
 }
 
@@ -94,12 +79,14 @@ tasks.register('dist') {
 tasks.register('addSource') {
     doLast {
         sourceSets.main.compileClasspath += files(project(':core').sourceSets.main.allJava.srcDirs)
-        sourceSets.main.runtimeClasspath += files(project(':core').sourceSets.main.allJava.srcDirs)
     }
 }
 
 tasks.compileGwt.dependsOn(addSource)
 tasks.draftCompileGwt.dependsOn(addSource)
 tasks.checkGwt.dependsOn(addSource)
+
+sourceCompatibility = 1.8
+sourceSets.main.java.srcDirs = [ "src/" ]
 
 eclipse.project.name = appName + "-html"
